@@ -1,17 +1,10 @@
-description = "Base generator and data model of jpgen"
+description = "clang-c bindings for jpgen"
 version = "0.0.1"
 
 dependencies {
     implementation(project(":jpgen-api"))
-    implementation(project(":jpgen-clangc"))
 
     compileOnly("org.jspecify:jspecify:1.0.0")
-}
-
-tasks.withType<JavaExec> {
-    jvmArgs(
-        "--enable-native-access=ALL-UNNAMED"
-    )
 }
 
 deployer.projectInfo {
